--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,5 +15,7 @@
     <welcome-file-list>
         <welcome-file>home.xhtml</welcome-file>
     </welcome-file-list>
-
+    <error-page>
+        <location>/errorpage.xhtml</location>
+    </error-page>
 </web-app>
